k8s/agiletc/ing/tc-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: tc-ing
spec:
  rules:
  - host: tc.example.com
    http:
      paths:
      - backend:
          service:
            name: agiletc-case-server-svc
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
